# ReSign

./: HookApplication.Java  README.md  build.bat  build.sh  build_project  gradle.properties  settings.gradle.kts  use.md
.android_home/.android/: debug.keystore
74be0ccfcf804daaa2a81da843af8eaa/: README.md  gradle.properties  settings.gradle.kts
74be0ccfcf804daaa2a81da843af8eaa/app/: build.gradle.kts  proguard-rules.pro
74be0ccfcf804daaa2a81da843af8eaa/app/src/main/: AndroidManifest.xml
74be0ccfcf804daaa2a81da843af8eaa/app/src/main/cpp/: CMakeLists.txt  common.h  io_redirect.cpp  maps_hide.cpp  native_killer.cpp  seccomp_handler.cpp
74be0ccfcf804daaa2a81da843af8eaa/app/src/main/java/com/xiao/resign/: MainActivity.java
74be0ccfcf804daaa2a81da843af8eaa/app/src/main/java/com/xiao/resign/killsig/: NativeSignatureKiller.java  SignatureKiller.java  SignatureKillerProvider.java
74be0ccfcf804daaa2a81da843af8eaa/app/src/main/res/layout/: activity_main.xml
74be0ccfcf804daaa2a81da843af8eaa/app/src/main/res/values/: strings.xml  themes.xml
Legacy_ReSign_20260310_131754/: Android签名校验方案汇总.md  HookApplication.Java  PROJECT.md  build.bat  build.sh  settings.gradle.kts
Legacy_ReSign_20260310_131754/app/: build.gradle.kts
Legacy_ReSign_20260310_131754/app/src/androidTest/java/com/xwaaa/resig/: DobbyRedirectInstrumentedTest.kt  DobbySecurityInstrumentedTest.kt  ReflectionVsDirectInstrumentedTest.kt
Legacy_ReSign_20260310_131754/app/src/main/: AndroidManifest.xml
Legacy_ReSign_20260310_131754/app/src/main/cpp/: CMakeLists.txt  killsignture.cpp
Legacy_ReSign_20260310_131754/app/src/main/cpp/include/: bytehook.h
Legacy_ReSign_20260310_131754/app/src/main/java/com/xwaaa/resig/: Core.java  HookApplication.java  IOUtils.kt  MainActivity.kt  XmlParser.kt
Legacy_ReSign_20260310_131754/app/src/main/java/com/xwaaa/resig/ui/theme/: Type.kt
Legacy_ReSign_20260310_131754/app/src/main/res/values/: strings.xml  themes.xml
Legacy_ReSign_20260310_131754/demos/apks2/sigCheck_1.0_kill_fancynomaps/res/drawable/: design_password_eye.xml  mtrl_switch_thumb.xml
Legacy_ReSign_20260310_131754/demos/apks2/sigCheck_1.0_kill_fancynomaps/res/layout/: material_clock_period_toggle.xml  material_time_input.xml  material_timepicker.xml  material_timepicker_dialog.xml  mtrl_alert_dialog.xml  mtrl_calendar_month_navigation.xml  mtrl_picker_header_dialog.xml  mtrl_picker_header_title_text.xml  mtrl_picker_header_toggle.xml
Legacy_ReSign_20260310_131754/demos/apks2/sigCheck_1.0_kill_fancynomaps/res/layout-land/: material_timepicker.xml  mtrl_picker_header_dialog.xml
Legacy_ReSign_20260310_131754/demos/apks2/sigCheck_1.0_kill_fancynomaps/res/layout-v21/: notification_template_custom_big.xml
Legacy_ReSign_20260310_131754/docs/: 使用文档.md  稳定性优化方案.md  项目文档.md
Legacy_ReSign_20260310_131754/docs/version_notes/: 2026-01-13-java-hook-trace.md
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/xwaaa/resig/: DebugSecurityInstrumentedTest.kt  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: classesx.dex
app/src/main/cpp/: CMakeLists.txt  common.h  io_redirect.cpp  io_redirect.h  killsignture.cpp  maps_hide.cpp  maps_hide.h  native-lib.cpp  native_engine.cpp  native_killer.cpp  plt_hook.cpp  plt_hook.h  seccomp_filter.cpp  seccomp_filter.h
app/src/main/java/com/resign/pro/core/: ApkParser.java  ApkSigner.java  ApkSigningBlock.java  DexInjector.java  ManifestEditor.java  PackEngine.java  SoInjector.java  SplitApkHandler.java
app/src/main/java/com/resign/pro/payload/: AntiDetection.java  NativeBridge.java  TraceHider.java
app/src/main/java/com/resign/pro/ui/: MainActivity.kt
app/src/main/java/com/resign/pro/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/resign/pro/util/: AppInfoHelper.kt  FileUtils.kt  Logger.java  ZipUtils.java
app/src/main/java/com/xwaaa/resig/: ApkUtils.kt  Appinfo.kt  Core.java  FileUtils.kt  Inject.kt  MainActivity.kt  ManifestEditorMain.kt  NativeRedirector.kt  StringItems.kt
app/src/main/java/com/xwaaa/resig/ui/theme/: Color.kt  Theme.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/xwaaa/resig/: ExampleUnitTest.kt
demos/apks2/sigCheck_1.0_kill_fancynomaps/: AndroidManifest.xml  classes2.dex  classes3.dex  classes4.dex  classes5.dex  resources.arsc
demos/apks2/sigCheck_1.0_kill_fancynomaps/res/drawable/: m3_password_eye.xml
demos/apks2/sigCheck_1.0_kill_fancynomaps/res/layout/: abc_alert_dialog_material.xml  abc_tooltip.xml  activity_main.xml  m3_alert_dialog.xml  material_clockface_view.xml  mtrl_calendar_month_labeled.xml  mtrl_picker_header_fullscreen.xml  mtrl_picker_header_selection_text.xml  mtrl_search_view.xml
demos/apks2/sigCheck_1.0_kill_fancynomaps/res/layout-land/: material_clock_period_toggle_land.xml
demos/apks2/sigCheck_1.0_kill_fancynomaps/res/layout-v21/: notification_template_icon_group.xml
doc/: 网络签名校验方案技术文档.md
docs/: pine-and-resig-guide.md
gradle/wrapper/: gradle-wrapper.properties
payload/: HookEntry.java
scripts/: build_dobby_android.sh  build_native.sh  build_payload.sh
